# grimoire

./: .gitignore  config.json  grimoire
scripts/: clean_slate.sh  download_models.py
src/memory_lib/: README.md  bootstrap.py  config.py  main.py  pyproject.toml  test_standalone.py
src/memory_lib/api/: routes.py
src/memory_lib/domain/: types.py
src/memory_lib/memory/: consolidation.py  dissolver.py  experience.py  hnsw.py  scoring.py  session_index.py
src/memory_lib/memory_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/memory_lib/models/: embedder.py  ner.py  reranker.py  resolver.py  summarizer.py
src/memory_lib/observer/: entities.py  filter.py  marker.py  ner.py  pipeline.py  utils.py
src/memory_lib/storage/: persistence.py  schemas.py  sqlite.py
src/memory_lib/subconscious/: anchor.py  anchor_index.py  dreamer.py
src/memory_lib/tests/: __init__.py  test_anchor_index.py  test_anchor_model.py  test_api_routes.py  test_config.py  test_dissolver_pure.py  test_domain_types.py  test_dreamer.py  test_experience_pure.py  test_filter_pure.py  test_hnsw_pure.py  test_marker_pure.py  test_scoring.py  test_utils_compress.py
src/proxy/: nodemon.json  package-lock.json  package.json  tsconfig.json
src/proxy/src/: body-stream.ts  config.ts  http.ts  index.ts  memory-client.ts  proxy.ts
src/proxy/src/middleware/: cors.ts  logging.ts
src/proxy/src/routes/: admin.ts  inject.ts
src/proxy/src/types/: models.ts
src/proxy/tests/: config.test.ts  error_handling.test.ts  proxy_format.test.ts  retry.test.ts
