[project]
name = "memory_lib"
version = "0.1.0"
description = "Memory layer for AI agent proxy"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.24",
    "aiosqlite>=0.19",
    "fastapi>=0.100",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "lz4>=4.0",
    "psutil>=5.9",
    "llama-cpp-python",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["memory_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
